Fixed overflowY

--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 html {
-  overflow-y: scroll;
+  overflowY: scroll;
 }
 
 body {
